[project]
name = "mcp-buste-paga"
version = "0.1.0"
description = "MCP server for Italian INAZ payslip PDF parsing and analysis"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.26.0",
    "pdfplumber>=0.11.0",
]

[project.scripts]
mcp-buste-paga = "mcp_buste_paga.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
